# access-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  main.py  manifest.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: docker-image.yml  python-app.yml
src/access_manager/: adapter.py  cli.py  client.py  manifest.py
src/access_manager/models/: github.py
tests/: cli_test.py  conftest.py  github_manifest_test.py  test.py
